Restcomm add load test for Gather verb This close #1164 (cherry picked from commit 9171266)